# finance-analysis

./: .env.example  .gitignore  DASHBOARD_INTEGRATION.md  DATABASE_CONFIGURATION_AGENT.md  DEPLOYMENT.md  ERROR_HANDLING.md  PERFORMANCE_OPTIMIZATION.md  README.md  REPORT_ANALYSIS_IMPROVEMENTS.md  build.sh  check_ui_dashboard.py  dashboard_diagnosis.py  debug_dashboard.py  deploy-check.sh  frontend_test_summary.py  implementation_summary.py  langgraph.json  llm_test_summary.py  minimal_dashboard_server.py  render.yaml  simple_dashboard_server.py  test_business_api.py  test_business_ideas.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_direct.py  test_dashboard_pages.py  test_dashboard_ui.py  test_feature.py  test_five_ideas.py  test_frontend_comprehensive.py  test_frontend_pages.py  test_idea_generator.py  test_llm_agents.py  test_page_functionality.py  test_ui.py
src/backend/: .env.example  .fastapicloudignore  Dockerfile  ai_biz.db  init_db.py  pyproject.toml  requirements.txt
src/backend/app/: .env  config.py  dependencies.py  main.py
src/backend/app/agents/: base_agent.py  chat_agent.py  competitor_agent.py  database_agent.py  decision_agent.py  financial_analysis_agent.py  forecasting_agent.py  market_research_agent.py
src/backend/app/api/: router.py
src/backend/app/database/: init_data.py  models.py  optimization.py  session.py
src/backend/app/exceptions/: mpesa_exceptions.py
src/backend/app/logging/: mpesa_logger.py
src/backend/app/middleware/: language.py  performance.py
src/backend/app/ml/: evaluation.py  feature_engineering.py  (+2 more)
(+114 files in other folders)
